調整 註解及 javadoc